Asset manager: Fixed pagination always visible on smartphone view

--- a/src/css/boom/assets/manager.less
+++ b/src/css/boom/assets/manager.less
@@ -288,7 +288,6 @@
             }
 
             #b-assets-pagination {
-                display: block;
                 background: @darkest-grey;
                 height: 50px;
                 width: 100vw;
